# document-rag-backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  dorag-backend-AutoDeployTrigger-f6fb5240-f55f-4c04-afa0-d911f5a3dbf1.yml  dorag-container-AutoDeployTrigger-92f54936-e84c-4659-a8a7-6c3e9be2ada3.yml
app/: main.py
app/api/: routes.py
app/core/: auth.py  config.py  db.py  security.py
app/models/: schemas.py
app/services/: rag_service.py
prompts/: classifier.md  generator.md
