[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain-google-genai",
    "pinecone-client",
    "langgraph",
    "python-multipart",
    "pydantic",
    "pypdf",
    "langchain-text-splitters",
    "langchain-pinecone",
    "dotenv>=0.9.9",
    "pydantic-settings>=2.13.1",
    "langchain-openai>=1.1.11",
    "pyjwt>=2.12.1",
    "supabase>=2.28.3",
    "langchain-community>=0.4.1",
    "pymupdf>=1.27.2.2",
]
